fix(navbar): extra padding on mobile logo

--- a/packages/kotti-style/_navbar.scss
+++ b/packages/kotti-style/_navbar.scss
@@ -207,7 +207,7 @@ $narrow-navbar-width: 3.2rem;
 	}
 	.navbar-header {
 		width: 100%;
-		padding: 0;
+		padding: 0.2rem 0;
 	}
 	.navbar-logo {
 		display: none;
